--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
             <div class="topline"></div>
         <div class="remain">
             <div class="main">
-                <img src="/Images/asset 12.jpeg" alt="">
+                <img src="/images/asset12.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">Straight to the Points: McDelivery® in the App</h1>
@@ -47,7 +47,7 @@
         </div>
         <div class="remain">
             <div class="main">
-                <img src="/Images/asset 13.jpeg" alt="">
+                <img src="/images/asset13.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">The McRib® is Back to Say Bye</h1>
@@ -58,7 +58,7 @@
         </div>
         <div class="remain">
             <div class="main">
-                <img src="/Images/asset 14.jpeg" alt="">
+                <img src="/images/asset14.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">Free Big Mac® Now.* Free McDonald’s Later.^</h1>
@@ -70,7 +70,7 @@
         </div>
         <div class="remain">
             <div class="main">
-                <img src="/Images/asset 15.jpeg" alt="">
+                <img src="/images/asset15.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">Your Story Deserves a Hollywood Ending</h1>
@@ -81,7 +81,7 @@
         </div>
         <div class="remain">
             <div class="main">
-                <img src="/Images/asset 16.jpeg" alt="">
+                <img src="/images/asset16.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">Order McDelivery® Now*</h1>
@@ -92,7 +92,7 @@
         </div>
         <div class="remain">
             <div class="main">
-                <img src="/Images/asset 17.jpeg" alt="">
+                <img src="/images/asset17.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">Deals for Days</h1>
@@ -197,7 +197,7 @@
                 <section>Cookie Settings</section>
             </div>
             <div class="f2">
-                <section><img src="/logo/asset 0.jpeg" alt=""></section>
+                <section><img src="/logo/asset0.jpeg" alt=""></section>
                 <section>© 2017 - 2022 McDonald's. All Rights Reserved</section>
             </div>
             </footer>
