--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
             </table>
         </div>
             <div class="social">
-               <section><img src="/icons/asset 18.png" alt=""></section>
-               <section><img src="/icons/asset 19.png" alt=""></section>
-               <section><img src="/icons/asset 20.png" alt=""></section>
-               <section><img src="/icons/asset 21.png" alt=""></section>
-               <section><img src="/icons/asset 22.png" alt=""></section>
-               <section><img src="/icons/asset 23.png" alt=""></section>
+               <section><img src="asset18.png" alt=""></section>
+               <section><img src="asset19.png" alt=""></section>
+               <section><img src="asset20.png" alt=""></section>
+               <section><img src="asset21.png" alt=""></section>
+               <section><img src="asset22.png" alt=""></section>
+               <section><img src="asset23.png" alt=""></section>
                <section class="appl"><img src="/icons/asset 24.png" alt=""></section>
                <section><img src="/icons/asset 25.png" alt=""></section> 
             </div>
