--- a/index.html
+++ b/index.html
@@ -178,14 +178,14 @@
             </table>
         </div>
             <div class="social">
-               <section><img src="asset18.png" alt=""></section>
-               <section><img src="asset19.png" alt=""></section>
-               <section><img src="asset20.png" alt=""></section>
-               <section><img src="asset21.png" alt=""></section>
-               <section><img src="asset22.png" alt=""></section>
-               <section><img src="asset23.png" alt=""></section>
-               <section class="appl"><img src="/icons/asset 24.png" alt=""></section>
-               <section><img src="/icons/asset 25.png" alt=""></section> 
+               <section><img src="/asset18.png" alt=""></section>
+               <section><img src="/asset19.png" alt=""></section>
+               <section><img src="/asset20.png" alt=""></section>
+               <section><img src="/asset21.png" alt=""></section>
+               <section><img src="/asset22.png" alt=""></section>
+               <section><img src="/asset23.png" alt=""></section>
+               <section class="appl"><img src="/asset24.png" alt=""></section>
+               <section><img src="/asset25.png" alt=""></section> 
             </div>
             <footer class="foots">
                 <div class="f1">
