--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="all">
         <div class="header">
             <div class="menu">
-                <div class="logo"><img src="/logo/asset0.jpeg" alt=""></div>
+                <div class="logo"><img src="./logo/asset0.jpeg" alt=""></div>
                 <div class="two">
                     <div class="tline"><section class="lang"><select name="Language" id=""><option value="0">Language</option><option value="1">English</option>
                     <option value="2">Español</option>
