--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>McDonalds: Burgers,Fries & M</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -36,7 +36,7 @@
             <div class="topline"></div>
         <div class="remain">
             <div class="main">
-                <img src="/images/asset12.jpeg" alt="">
+                <img src="./images/asset12.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">Straight to the Points: McDelivery® in the App</h1>
@@ -47,7 +47,7 @@
         </div>
         <div class="remain">
             <div class="main">
-                <img src="/images/asset13.jpeg" alt="">
+                <img src="./images/asset13.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">The McRib® is Back to Say Bye</h1>
@@ -58,7 +58,7 @@
         </div>
         <div class="remain">
             <div class="main">
-                <img src="/images/asset14.jpeg" alt="">
+                <img src="./images/asset14.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">Free Big Mac® Now.* Free McDonald’s Later.^</h1>
@@ -70,7 +70,7 @@
         </div>
         <div class="remain">
             <div class="main">
-                <img src="/images/asset15.jpeg" alt="">
+                <img src="./images/asset15.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">Your Story Deserves a Hollywood Ending</h1>
@@ -81,7 +81,7 @@
         </div>
         <div class="remain">
             <div class="main">
-                <img src="/images/asset16.jpeg" alt="">
+                <img src="./images/asset16.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">Order McDelivery® Now*</h1>
@@ -92,7 +92,7 @@
         </div>
         <div class="remain">
             <div class="main">
-                <img src="/images/asset17.jpeg" alt="">
+                <img src="./images/asset17.jpeg" alt="">
             </div>
             <div class="abbr">
                 <h1 class="H1">Deals for Days</h1>
@@ -178,14 +178,14 @@
             </table>
         </div>
             <div class="social">
-               <section><img src="/asset18.png" alt=""></section>
-               <section><img src="/asset19.png" alt=""></section>
-               <section><img src="/asset20.png" alt=""></section>
-               <section><img src="/asset21.png" alt=""></section>
-               <section><img src="/asset22.png" alt=""></section>
-               <section><img src="/asset23.png" alt=""></section>
-               <section class="appl"><img src="/asset24.png" alt=""></section>
-               <section><img src="/asset25.png" alt=""></section> 
+               <section><img src="./asset18.png" alt=""></section>
+               <section><img src="./asset19.png" alt=""></section>
+               <section><img src="./asset20.png" alt=""></section>
+               <section><img src="./asset21.png" alt=""></section>
+               <section><img src="./asset22.png" alt=""></section>
+               <section><img src="./asset23.png" alt=""></section>
+               <section class="appl"><img src="./asset24.png" alt=""></section>
+               <section><img src="./asset25.png" alt=""></section> 
             </div>
             <footer class="foots">
                 <div class="f1">
@@ -197,7 +197,7 @@
                 <section>Cookie Settings</section>
             </div>
             <div class="f2">
-                <section><img src="/logo/asset0.jpeg" alt=""></section>
+                <section><img src="./logo/asset0.jpeg" alt=""></section>
                 <section>© 2017 - 2022 McDonald's. All Rights Reserved</section>
             </div>
             </footer>
